# C-Communication

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: ARCHITECTURE.md  SETUP.md
