[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "c-communication"
version = "0.1.0"
description = "Enterprise AI/ML platform for advanced communication solutions using LLMs and RAG"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "C-Communication Team", email = "team@c-communication.dev"}
]
keywords = [
    "llm",
    "rag",
    "artificial-intelligence",
    "machine-learning",
    "azure",
    "langchain"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "redis>=5.0.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.1.0",
    "openai>=1.0.0",
    "azure-openai>=1.0.0",
    "azure-identity>=1.13.0",
    "qdrant-client>=2.7.0",
    "pinecone-client>=3.0.0",
    "pydantic-ai>=0.7.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "requests>=2.31.0",
    "httpx>=0.25.0",
    "aiohttp>=3.9.0",
    "python-multipart>=0.0.6",
    "PyJWT>=2.8.0",
    "passlib[bcrypt]>=1.7.4",
    "cryptography>=41.0.0",
    "prometheus-client>=0.19.0",
]

[project.urls]
Homepage = "https://github.com/nareshs1624-ops/C-Communication"
Documentation = "https://github.com/nareshs1624-ops/C-Communication/wiki"
Repository = "https://github.com/nareshs1624-ops/C-Communication.git"
Issues = "https://github.com/nareshs1624-ops/C-Communication/issues"

[project.optional-dependencies]
ml = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "torchaudio>=2.0.0",
    "tensorflow>=2.13.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
]
rag = [
    "sentence-transformers>=2.2.0",
    "chromadb>=0.4.0",
    "weaviate-client>=3.24.0",
    "milvus>=2.3.0",
    "faiss-cpu>=1.7.4",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-xdist>=3.5.0",
    "black>=23.12.0",
    "flake8>=6.1.0",
    "isort>=5.13.0",
    "mypy>=1.7.0",
    "pylint>=3.0.0",
    "bandit>=1.7.5",
    "safety>=2.3.5",
    "pre-commit>=3.5.0",
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=2.0.0",
]
cloud = [
    "azure-storage-blob>=12.18.0",
    "azure-storage-queue>=12.17.0",
    "boto3>=1.29.0",
    "google-cloud-storage>=2.10.0",
]
kubernetes = [
    "kubernetes>=28.1.0",
    "helm>=0.11.0",
]
monitoring = [
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
    "opentelemetry-exporter-jaeger>=1.21.0",
    "opentelemetry-instrumentation-fastapi>=0.42b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.42b0",
    "sentry-sdk>=1.38.0",
]
all = [
    "c-communication[ml,rag,dev,cloud,kubernetes,monitoring]"
]

[tool.setuptools]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["*/migrations/*"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_any_generics = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_optional = true
pretty = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --strict-markers --tb=short --disable-warnings"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
    "async: Async tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
]

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring
    "R0913",  # too-many-arguments
    "R0914",  # too-many-locals
]
